maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:4: error: not found: value n
    n = random3()
    ^RandomMouseMaze:5: error: not found: value n
    if (n==0) {
        ^RandomMouseMaze:11: error: not found: value n
      if (n==1) {
          ^