maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  while (!estSurBiscuit()) {
    n = random3()
    if (n==0) {
      if (!estFaceMur) {
        avance()
      }
    }
    else {
      if (n==1) {
        gauche()
      }
      else {
        droite()
      }
    }
  }
  prendBiscuit()
}
